--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,17 +82,13 @@
             android:textAllCaps="false"
             android:textSize="15dp" />
 
-        <Button
-            android:onClick="sendLoginFacebookData"
+        <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
-            style="?android:textAppearanceSmall"
-            android:textColor="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@color/com_facebook_blue"
-            android:text="Fcebook"
-            android:textStyle="bold" />
+            android:layout_width="wrap_content"
+            android:layout_height="30px"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp" />
 
 
     </LinearLayout>
