--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,14 @@
                 android:textColorHint="@android:color/white" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Login Button -->
+       <Button
+           android:id="@+id/btn_login"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:background="@color/btn_login"
+           android:textColor="@color/white"
+           android:text="@string/btn_login"
+           />
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
@@ -59,32 +66,34 @@
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
             android:padding="20dp"
+            android:text="Entrar com facebook"
             android:drawableLeft="@drawable/ic_003_home"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp" />
 
-        <!--<Button-->
-            <!--android:id="@+id/btn_reset_password"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="20dip"-->
-            <!--android:background="@null"-->
-            <!--android:text="@string/btn_forgot_password"-->
-            <!--android:textAllCaps="false"-->
-            <!--android:textColor="@color/colorAccent" />-->
+        <Button
+            android:id="@+id/btn_reset_password"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dip"
+            android:background="@null"
+            android:text="@string/btn_forgot_password"
+            android:textAllCaps="false"
+            android:textColor="@color/colorAccent" />
 
         <!-- Link to Login Screen -->
 
-        <!--<Button-->
-            <!--android:id="@+id/btn_signup"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="20dip"-->
-            <!--android:background="@null"-->
-            <!--android:text="@string/btn_link_to_register"-->
-            <!--android:textAllCaps="false"-->
-            <!--android:textSize="15dp" />-->
+        <Button
+            android:id="@+id/btn_signup"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dip"
+            android:background="@null"
+            android:textColor="@color/colorPrimary"
+            android:text="@string/btn_link_to_register"
+            android:textAllCaps="false"
+            android:textSize="15dp" />
 
 
     </LinearLayout>
