--- a/app/src/main/res/layout/perfil_fragment.xml
+++ b/app/src/main/res/layout/perfil_fragment.xml
@@ -11,10 +11,10 @@
         android:id="@+id/photo"
         android:layout_width="78dp"
         android:layout_height="78dp"
-        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
+        android:layout_marginLeft="4dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="1dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
     <TextView
         android:id="@+id/nome"
         android:layout_width="wrap_content"
@@ -27,38 +27,34 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp" />
+
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="27dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="7dp"
+
         android:gravity="center"
         android:text="E-mail"
         android:textSize="20dp"
-
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintHorizontal_bias="0.037"
+        app:layout_constraintHorizontal_bias="0.081"
         app:layout_constraintLeft_toRightOf="@+id/photo"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="7dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nome"
-        android:layout_marginStart="8dp" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
-    <!--<com.facebook.login.widget.LoginButton-->
-        <!--android:id="@+id/login_button"-->
-        <!--android:layout_width="328dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textSize="17dp"-->
-        <!--android:paddingTop="15dp"-->
-        <!--android:paddingBottom="15dp"-->
-        <!--android:padding="20dp"-->
-        <!--android:layout_gravity="center_horizontal"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/photo"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--/>-->
+    <Button
+        android:id="@+id/btn_sair"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Sair"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
 
 </android.support.constraint.ConstraintLayout>
